# reesetest

ReeseBassVST/: .gitignore  CMakeLists.txt  DEVELOPER_GUIDE.md  LICENSE  README.md
ReeseBassVST/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
ReeseBassVST/Source/DSP/: NoiseGenerator.cpp  NoiseGenerator.h  OctaveDivider.cpp  OctaveDivider.h  RingModulator.cpp  RingModulator.h  StateVariableFilter.cpp  StateVariableFilter.h  WaveShapers.cpp  WaveShapers.h
ReeseBassVST/Source/Parameters/: ParameterManager.cpp  ParameterManager.h
